--- a/_posts/2024-10-14-iuno.markdown
+++ b/_posts/2024-10-14-iuno.markdown
@@ -1,20 +1,24 @@
 ---
 layout: post
-title: "Catchbook German"
+title: "iuno"
 ---
 ![alternativtext](\pbl-blog\image\Banner.jpg)
 ## Einleitung
-Als begeisterter Angler beschloss ich, ein Projekt übers Angeln zu erstellen. In dem Projekt werden alle Fänge aufgezeichnet. Die Fischarten, Köder, Ort, Zeit und Datum.
+***Hier die Einleitung!!!***
 
-## Verwendete Programme
+## Verwendete Software
 * Intellij
 * Postman
 * Proxmox 8 (Server OS)
 * PostgerSQL
 * pgAdmin
-* Docker + Portainer
 * draw.io (Planung)
 * Visual Studio Code
+
+## Verwendete Hardware
+* Raspberry Pi pico
+* ![Server](https://22ronny.github.io/server-blog/2024/01/18/Eigenbau-Server.html)
+
 
 
 
